--- a/airbyte-integrations/connectors/destination-iceberg-v2/build.gradle
+++ b/airbyte-integrations/connectors/destination-iceberg-v2/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${project.ext.junitVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-params:${project.ext.junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${project.ext.junitVersion}")
+
+    integrationTestImplementation("com.squareup.okhttp3:okhttp:4.12.0")
 }
 
 test {
